[tool.poetry]
name = "ai-worker"
version = "0.1.2"
description = "api server that posts capabilities, and accepts jobs"
authors = ["erik aronesty <erik@q32.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ai_worker"}, {include = "gguf_loader"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
llama-cpp-python = {extras = ["server"], version = "^0.2.2"}
pydantic-settings = "^2.0.3"
fastapi = "^0.103.1"
websockets = "^11.0.3"
httpx = "^0.24.1"
psutil = "^5.9.5"
huggingface-hub = "^0.16.4"
sentencepiece = "^0.1.99"
python-dotenv = "^1.0.0"
pynvml = "^11.5.0"
gguf = "^0.3.2"
boto3 = "^1.28.45"
itsdangerous = "^2.1.2"
httpx-sse = "^0.3.1"
pyopencl = "^2023.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pyinstaller = "^5.13.2"
boto3 = "^1.28.43"
ruff = "^0.0.288"


[tool.poetry.scripts]
gputopia_worker = 'ai_worker.main:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
