[tool.poetry]
name = "ai-worker"
version = "0.2.0"
description = "api server that posts capabilities, and accepts jobs"
authors = ["erik aronesty <erik@q32.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ai_worker"}, {include = "gguf_loader"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
llama-cpp-python = {extras = ["server"], version = "0.2.7"}
pydantic-settings = "^2.0.3"
fastapi = "^0.103.1"
websockets = "^11.0.3"
httpx = "^0.24.1"
psutil = "^5.9.5"
huggingface-hub = "^0.16.4"
sentencepiece = "^0.1.99"
python-dotenv = "^1.0.0"
pynvml = "^11.5.0"
gguf = "^0.3.2"
boto3 = "^1.28.45"
itsdangerous = "^2.1.2"
httpx-sse = "^0.3.1"
pyopencl = "^2023.1.2"
coincurve = "^18.0.0"

[tool.poetry.group.torch]
optional = true

[tool.poetry.group.torch.dependencies]
bitsandbytes = "^0.41.1"
torch = ">=2.1.0"
datasets = "^2.14.5"
scipy = "^1.11.3"
transformers = "^4.34.0"
accelerate = "^0.23.0"
peft = "^0.5.0"
cmake = "^3.27.7"
lit = "^17.0.3"
nvidia-cublas-cu11 = "^11.11.3.6"
nvidia-cuda-cupti-cu11 = "^11.8.87"
nvidia-cuda-nvrtc-cu11 = "^11.8.89"
nvidia-cuda-runtime-cu11 = "^11.8.89"
nvidia-cudnn-cu11 = "^8.9.5.29"
nvidia-cufft-cu11 = "^10.9.0.58"
nvidia-curand-cu11 = "^10.3.0.86"
nvidia-cusolver-cu11 = "^11.4.1.48"
nvidia-nccl-cu11 = "^2.18.3"
nvidia-nvtx-cu11 = "^11.8.86"
triton = "^2.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pyinstaller = "^5.13.2"
boto3 = "^1.28.43"
ruff = "^0.0.288"
toml = "^0.10.2"


[tool.poetry.scripts]
gputopia_worker = 'ai_worker.main:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
